fix images on meet the team page from being hidden by header on large screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ main {
     float: left;
     width: 33.3%;
     margin-bottom: 16px;
-    padding: 0 8px;
+    padding: 80px 8px;
   }
   
   /* Display the columns below each other instead of side by side on small screens */
